# DataStructureLibs

./: .gitignore  CMakeLists.txt  build.sh  doublylinkedlists.c  doublylinkedlists.h  hashtable.c  hashtable.h  linkedlists.c  linkedlists.h  singlelinkedlists.c  singlelinkedlists.h  vector.c  vector.h
.github/workflows/: c-cpp.yml
basic-structures/: doublylinkedlists.c  doublylinkedlists.h  dynamic_array.c  dynamic_array.h  hashtable.h  library.c  library.h  linkedlists.h  singlelinkedlists.c
unittests/: doublylinkedliststest.c  dynamic_array_test.c  std_list.cpp  vectortest.c
